--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "homepage": "https://github.com/bearjaws/b2cloud#readme",
   "dependencies": {
     "bluebird": "^3.1.1",
+    "lodash": "^3.10.1",
+    "request": "^2.67.0",
     "request-promise": "^1.0.2"
   }
 }
