--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "lodash": "^3.10.1",
     "request": "^2.67.0",
     "request-promise": "^1.0.2"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-jsdoc-to-markdown": "^1.2.0"
   }
 }
