--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "b2cloud",
-  "version": "0.2.5",
+  "version": "0.3.0",
   "description": "Module for interacting with back blaze b2cloud api",
   "main": "index.js",
   "scripts": {
@@ -29,10 +29,8 @@
     "request-promise": "^1.0.2"
   },
   "devDependencies": {
+    "expect.js": "^0.3.1",
     "grunt": "^0.4.5",
     "grunt-jsdoc-to-markdown": "^1.2.0"
-  },
-  "engines": {
-    "node": ">=4.0.0"
   }
 }
